--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="author" content="Ozren Dabić, Emad Aghajani, Gabriele Bavota">
+    <meta name="description" content="The DL4SE tool allows to easily create large-scale datasets that can be used to either run MSR studies or to train DL models to automate SE tasks.">
+    <meta name="keywords" content="dl4se, deep learning, software engineering, SE, mining software repositories, MSR, code completion, dataset, automation">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
