--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="author" content="Ozren Dabić, Emad Aghajani, Gabriele Bavota">
-    <meta name="description" content="The DL4SE tool allows to easily create large-scale datasets that can be used to either run MSR studies or to train DL models to automate SE tasks.">
-    <meta name="keywords" content="dl4se, deep learning, software engineering, SE, mining software repositories, MSR, code completion, dataset, automation">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="author" content="Ozren Dabić, Emad Aghajani, Gabriele Bavota" />
+    <meta
+      name="description"
+      content="The DL4SE tool allows to easily create large-scale datasets that can be used to either run MSR studies or to train DL models to automate SE tasks."
+    />
+    <meta
+      name="keywords"
+      content="dl4se, deep learning, software engineering, SE, mining software repositories, MSR, code completion, dataset, automation"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without
+        JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
