--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -15,14 +15,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-  </head>
-  <body>
     <noscript>
       <strong>
-        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
-        enable it to continue.
+          We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+          Please enable it to continue.
       </strong>
     </noscript>
+  </head>
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
