--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -23,7 +23,8 @@
     </noscript>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+        <!-- BUILT FILES WILL BE AUTO-INJECTED HERE -->
+    </div>
   </body>
 </html>
