Improve `body`-related styling

--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -22,7 +22,7 @@
       </strong>
     </noscript>
   </head>
-  <body>
+  <body class="min-vh-100 mw-100 d-flex flex-column justify-content-between">
     <div id="app">
         <!-- BUILT FILES WILL BE AUTO-INJECTED HERE -->
     </div>
