--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -17,14 +17,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <noscript>
       <strong>
-          We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-          Please enable it to continue.
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
+        enable it to continue.
       </strong>
     </noscript>
   </head>
   <body class="min-vh-100 mw-100 d-flex flex-column justify-content-between">
     <div id="app">
-        <!-- BUILT FILES WILL BE AUTO-INJECTED HERE -->
+      <!-- BUILT FILES WILL BE AUTO-INJECTED HERE -->
     </div>
   </body>
 </html>
