Rename "Dataset Hub" to "Data Hub"

--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -4,7 +4,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta charset="UTF-8" />
     <meta name="author" content="Ozren Dabić" />
-    <meta name="description" content="SEART Dataset Hub, SEART, Software Institute (SI), USI" />
+    <meta name="description" content="SEART Data Hub, SEART, Software Institute (SI), USI" />
     <meta name="keywords" content="github, sampling, open source, open source projects, mining software repositories, dataset generation, open source code analysis, code completion, deep learning model, large language model, model training, pre-training, fine-tuning" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
     <meta name="theme-color" content="#f8f9fa" />
