--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
     <meta name="theme-color" content="#f8f9fa" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" />
     <noscript>
       <strong>
         We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
