Render fallback footer when JavaScript is disabled

--- a/dl4se-website/public/index.html
+++ b/dl4se-website/public/index.html
@@ -69,8 +69,13 @@
     </noscript>
   </head>
   <body class="min-vh-100 mw-100 d-flex flex-column justify-content-between">
-    <div id="app">
-      <!-- BUILT FILES WILL BE AUTO-INJECTED HERE -->
-    </div>
+    <footer id="app">
+      <!-- BUILT FILES WILL REPLACE THIS CONTENT -->
+      <div class="bg-light py-3">
+        <div class="text-center container">
+          <span class="text-muted">&copy; 2022 - <%= new Date().getFullYear() %></span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
